examples/stun-setters/crashers/ca8575e1eab81b6fad9fc22a5c809524a728c4ab.output
panic: runtime error: slice bounds out of range

goroutine 1 [running]:
github.com/gortc/stun.ErrorCodeAttribute.AddTo(0x19a6, 0xc0000cc01c, 0x2f8, 0x7e4, 0xc0000929b0, 0xc0000929b0, 0x14)
	/tmp/go-fuzz-build819345499/gopath/src/github.com/gortc/stun/errorcode.go:40 +0x1cb
github.com/gortc/stun.FuzzSetters(0x7f168e781000, 0x2fd, 0x200000, 0x3)
	/tmp/go-fuzz-build819345499/gopath/src/github.com/gortc/stun/fuzz.go:119 +0x5af
go-fuzz-dep.Main(0x51c348)
	/tmp/go-fuzz-build819345499/goroot/src/go-fuzz-dep/main.go:49 +0xad
main.main()
	/tmp/go-fuzz-build819345499/gopath/src/github.com/gortc/stun/go.fuzz.main/main.go:10 +0x2d
exit status 2